pi-hole/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pihole
  namespace: pihole
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pihole
  template:
    metadata:
      labels:
        app: pihole
    spec:
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      containers:
      - name: pihole
        image: pihole/pihole:latest
        ports:
        - containerPort: 80
        - containerPort: 53
        volumeMounts:
        - mountPath: /etc/pihole
          name: pihole-volume
      volumes:
      - name: pihole-volume
        persistentVolumeClaim:
          claimName: pihole-pvc
