pi-hole/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pihole-web
  namespace: pihole
  labels:
    app: pihole
spec:
  selector:
    app: pihole
  ports:
  - port: 8081
    targetPort: 80
    name: http
  type: ClusterIP
